// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frontmatter: permalink default permalink 1`] = `
Array [
  Object {
    "data": Object {
      "_entry": "docs/test.md",
      "category": "category",
      "date": "2017-01-01T00:00:00.000Z",
      "name": "test",
      "url": "/docs/test/",
    },
  },
]
`;

exports[`frontmatter: permalink permalink /:category/:name.html 1`] = `
Array [
  Object {
    "data": Object {
      "_entry": "docs/test.md",
      "category": "category",
      "date": "2017-01-01T00:00:00.000Z",
      "name": "test",
      "permalink": "/:category/:name.html",
      "url": "/docs/test/",
    },
  },
]
`;

exports[`frontmatter: permalink permalink /:date/:name.html 1`] = `
Array [
  Object {
    "data": Object {
      "_entry": "docs/test.md",
      "category": "category",
      "date": "2017-01-01T00:00:00.000Z",
      "name": "test",
      "permalink": "/:date/:name.html",
      "url": "/docs/test/",
    },
  },
]
`;

exports[`processEntries  retrieves an array of docs with default values 1`] = `
Array [
  Object {
    "content": "text",
    "data": Object {
      "_entry": "docs/test.md",
      "date": "2017-01-01T00:00:00.000Z",
      "name": "test",
      "url": "/docs/test/",
    },
  },
]
`;
